// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`CombatService executeCombat handles combat for Szopołak with participants: [ "user1" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 14 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 4 HP",
  "Player_user1 otrzymuje 16 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 14 obrażeń",
  "Szopołak korzysta z akcji Rzut śmieciami!",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 11 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 4 HP",
  "Player_user1 otrzymuje 16 obrażeń",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 otrzymuje 11 obrażeń",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 14 obrażeń",
  "Szopołak korzysta z akcji Rzut śmieciami!",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 otrzymuje 12 obrażeń od efektu trucizna",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Szopołak with participants: [ "user1", "user2" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 5 HP",
  "Player_user1 otrzymuje 17 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 7 HP",
  "Player_user2 otrzymuje 25 obrażeń (KRYTYK!)",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Rzut śmieciami!",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user2 dostaje truciznę!",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 10 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 10 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 unika ataku!",
  "Player_user2 otrzymuje 12 obrażeń",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 19 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 otrzymuje 12 obrażeń",
  "Player_user2 unika ataku!",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Player_user2 unika ataku!",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 otrzymuje 18 obrażeń (KRYTYK!)",
  "Player_user1 nie może walczyć!",
  "Player_user2 otrzymuje 12 obrażeń",
  "Player_user2 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Szopołak with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 5 HP",
  "Player_user1 otrzymuje 17 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 19 obrażeń (KRYTYK!)",
  "Szopołak korzysta z akcji Rzut śmieciami!",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user2 dostaje truciznę!",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user3 dostaje truciznę!",
  "Player_user3 otrzymuje osłabienie!",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 10 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 10 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 10 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 otrzymuje 12 obrażeń",
  "Player_user2 unika ataku!",
  "Player_user3 otrzymuje 12 obrażeń",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 19 obrażeń (KRYTYK!)",
  "Player_user3 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user1 unika ataku!",
  "Player_user2 otrzymuje 12 obrażeń",
  "Player_user3 otrzymuje 12 obrażeń",
  "Player_user1 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Heal!",
  "Player_user3 otrzymuje leczenie za 15 HP",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 7 HP",
  "Player_user1 otrzymuje 25 obrażeń (KRYTYK!)",
  "Player_user1 nie może walczyć!",
  "Player_user2 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 6 obrażeń od efektu trucizna",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Player_user3 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Szopołak kradnie 5 HP",
  "Player_user3 otrzymuje 17 obrażeń",
  "Player_user3 nie może walczyć!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Ugryzienie!",
  "Player_user2 unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user2 otrzymuje 12 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user2 unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Szopołak otrzymuje 13 obrażeń",
  "Szopołak korzysta z akcji Drapnięcie!",
  "Player_user2 otrzymuje 18 obrażeń (KRYTYK!)",
  "Player_user2 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Duch Wędkarza with participants: [ "user1" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 otrzymuje 22 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 otrzymuje 20 obrażeń",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 rośnie w siłę!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Duch Wędkarza korzysta z akcji Ektoplazma!",
  "Duch Wędkarza otrzymuje leczenie za 18 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 22 obrażeń (KRYTYK!)",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 otrzymuje 22 obrażeń",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 22 obrażeń (KRYTYK!)",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 15 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Duch Wędkarza korzysta z akcji Ektoplazma!",
  "Duch Wędkarza otrzymuje leczenie za 18 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 otrzymuje 20 obrażeń",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 rośnie w siłę!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Duch Wędkarza with participants: [ "user1", "user2" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Ektoplazma!",
  "Duch Wędkarza otrzymuje leczenie za 18 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 otrzymuje 23 obrażeń",
  "Player_user2 otrzymuje 23 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 otrzymuje 21 obrażeń",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 rośnie w siłę!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user2 otrzymuje 21 obrażeń",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user2 rośnie w siłę!",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 otrzymuje 23 obrażeń",
  "Player_user1 nie może walczyć!",
  "Player_user2 unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user2 otrzymuje 21 obrażeń",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user2 rośnie w siłę!",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user2 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Duch Wędkarza with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 unika ataku!",
  "Player_user2 otrzymuje 23 obrażeń",
  "Player_user3 otrzymuje 23 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user3 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Ektoplazma!",
  "Duch Wędkarza otrzymuje leczenie za 18 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 unika ataku!",
  "Player_user2 otrzymuje 21 obrażeń",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user2 rośnie w siłę!",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user3 otrzymuje 31 obrażeń (KRYTYK!)",
  "Player_user3 otrzymuje osłabienie!",
  "Player_user3 rośnie w siłę!",
  "Player_user3 dostaje ogłuszenie!",
  "Player_user3 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza unika ataku!",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Połów!",
  "Player_user1 otrzymuje 34 obrażeń (KRYTYK!)",
  "Player_user2 otrzymuje 23 obrażeń",
  "Player_user2 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Duch Wędkarza otrzymuje 14 obrażeń",
  "Duch Wędkarza korzysta z akcji Zarzutka!",
  "Player_user1 otrzymuje 21 obrażeń",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 rośnie w siłę!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Zombie Bruno with participants: [ "user1" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 7 obrażeń",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 7 obrażeń",
  "Zombie Bruno korzysta z akcji Furia Kota!",
  "Zombie Bruno traci tarczę!",
  "Zombie Bruno rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 11 obrażeń",
  "Zombie Bruno korzysta z akcji Zaraźliwy Pazur!",
  "Player_user1 otrzymuje 17 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 7 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 otrzymuje 13 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 7 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 otrzymuje 13 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 11 obrażeń od efektu trucizna",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Zombie Bruno with participants: [ "user1", "user2" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Furia Kota!",
  "Zombie Bruno traci tarczę!",
  "Zombie Bruno rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Zombie Bruno korzysta z akcji Zaraźliwy Pazur!",
  "Player_user1 otrzymuje 18 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user2 otrzymuje 18 obrażeń",
  "Player_user2 dostaje truciznę!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 unika ataku!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user2 otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user2 dostaje truciznę!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Furia Kota!",
  "Zombie Bruno traci tarczę!",
  "Zombie Bruno rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 15 obrażeń (KRYTYK!)",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 otrzymuje 14 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 4 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 otrzymuje 14 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 8 obrażeń od efektu trucizna",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Zombie Bruno with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Furia Kota!",
  "Zombie Bruno traci tarczę!",
  "Zombie Bruno rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Zombie Bruno korzysta z akcji Zaraźliwy Pazur!",
  "Player_user1 otrzymuje 27 obrażeń (KRYTYK!)",
  "Player_user1 dostaje truciznę!",
  "Player_user2 otrzymuje 18 obrażeń",
  "Player_user2 dostaje truciznę!",
  "Player_user3 otrzymuje 18 obrażeń",
  "Player_user3 dostaje truciznę!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user3 unika ataku!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno unika ataku!",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user3 otrzymuje 14 obrażeń",
  "Player_user3 dostaje truciznę!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Player_user3 korzysta z umiejętności Heal!",
  "Player_user3 otrzymuje leczenie za 15 HP",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Player_user3 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno unika ataku!",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Zombie Bruno korzysta z akcji Furia Kota!",
  "Zombie Bruno traci tarczę!",
  "Zombie Bruno rośnie w siłę!",
  "Player_user3 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 10 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user3 otrzymuje 30 obrażeń (KRYTYK!)",
  "Player_user3 dostaje truciznę!",
  "Player_user3 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 6 obrażeń",
  "Zombie Bruno korzysta z akcji Pazur Zombie!",
  "Player_user1 otrzymuje 14 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user1 otrzymuje 4 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno unika ataku!",
  "Zombie Bruno korzysta z akcji Kradzież Czasu!",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user1 otrzymuje 4 obrażeń od efektu trucizna",
  "Player_user1 korzysta z umiejętności Strike!",
  "Zombie Bruno unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Zombie Bruno otrzymuje 9 obrażeń (KRYTYK!)",
  "Zombie Bruno korzysta z akcji Zaraźliwy Pazur!",
  "Player_user1 otrzymuje 12 obrażeń",
  "Player_user1 dostaje truciznę!",
  "Player_user2 otrzymuje 18 obrażeń (KRYTYK!)",
  "Player_user2 dostaje truciznę!",
  "Player_user1 otrzymuje 7 obrażeń od efektu trucizna",
  "Player_user2 otrzymuje 3 obrażeń od efektu trucizna",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Harpia with participants: [ "user1" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 14 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user1 otrzymuje 25 obrażeń",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 14 obrażeń",
  "Harpia korzysta z akcji Podmuch!",
  "Player_user1 otrzymuje 27 obrażeń",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Harpia with participants: [ "user1", "user2" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Podmuch!",
  "Player_user1 otrzymuje 28 obrażeń",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user2 otrzymuje 39 obrażeń (KRYTYK!)",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user2 otrzymuje 26 obrażeń",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user2 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user1 otrzymuje 26 obrażeń",
  "Player_user1 dostaje ogłuszenie!",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Harpia with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Podmuch!",
  "Player_user1 unika ataku!",
  "Player_user2 otrzymuje 28 obrażeń",
  "Player_user3 otrzymuje 28 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 19 obrażeń (KRYTYK!)",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user2 otrzymuje 26 obrażeń",
  "Player_user2 dostaje ogłuszenie!",
  "Player_user2 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user3 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 19 obrażeń (KRYTYK!)",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia unika ataku!",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user3 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Niepoprawne korzystanie z mikrofonu!",
  "Player_user3 otrzymuje 26 obrażeń",
  "Player_user3 dostaje ogłuszenie!",
  "Player_user3 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia korzysta z akcji Podmuch!",
  "Player_user1 otrzymuje 28 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Harpia otrzymuje 13 obrażeń",
  "Harpia traci przytomność!",
  "Potwór został schwytany!",
]
`;

exports[`CombatService executeCombat handles combat for Opętana Lalka with participants: [ "user1" ] 1`] = `
[
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 26 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 26 obrażeń",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Opętana Lalka with participants: [ "user1", "user2" ] 1`] = `
[
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 otrzymuje 36 obrażeń (KRYTYK!)",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 otrzymuje 27 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Heal!",
  "Player_user2 otrzymuje leczenie za 15 HP",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 9 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 40 obrażeń (KRYTYK!)",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 otrzymuje 24 obrażeń",
  "Player_user2 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 9 obrażeń (KRYTYK!)",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 24 obrażeń",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 27 obrażeń",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Opętana Lalka with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user3 otrzymuje 27 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 9 obrażeń (KRYTYK!)",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user3 otrzymuje 36 obrażeń (KRYTYK!)",
  "Player_user3 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 otrzymuje 27 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 24 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 9 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Złość!",
  "Opętana Lalka rośnie w siłę!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka unika ataku!",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user1 otrzymuje 40 obrażeń (KRYTYK!)",
  "Player_user1 nie może walczyć!",
  "Player_user2 korzysta z umiejętności Strike!",
  "Opętana Lalka otrzymuje 6 obrażeń",
  "Opętana Lalka korzysta z akcji Dźgnięcie!",
  "Player_user2 otrzymuje 24 obrażeń",
  "Player_user2 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Sukkub with participants: [ "user1" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 15 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 12 HP",
  "Player_user1 otrzymuje 30 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 15 obrażeń",
  "Sukkub korzysta z akcji Piekielne Selfie!",
  "Player_user1 otrzymuje 28 obrażeń",
  "Player_user1 zaczyna płonąć!",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Sukkub with participants: [ "user1", "user2" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Piekielne Selfie!",
  "Player_user1 otrzymuje 29 obrażeń",
  "Player_user1 zaczyna płonąć!",
  "Player_user2 unika ataku!",
  "Player_user1 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Uwodzenie!",
  "Player_user2 traci tarczę!",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user1 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user1 korzysta z umiejętności Heal!",
  "Player_user1 otrzymuje leczenie za 15 HP",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 18 obrażeń (KRYTYK!)",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 13 HP",
  "Player_user2 otrzymuje 33 obrażeń",
  "Player_user1 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 21 obrażeń (KRYTYK!)",
  "Sukkub korzysta z akcji Uwodzenie!",
  "Player_user2 traci tarczę!",
  "Player_user2 otrzymuje osłabienie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 21 obrażeń (KRYTYK!)",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 12 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Player_user2 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 12 HP",
  "Player_user2 otrzymuje 31 obrażeń",
  "Player_user2 nie może walczyć!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Uwodzenie!",
  "Player_user1 traci tarczę!",
  "Player_user1 otrzymuje osłabienie!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 12 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Player_user1 unika ataku!",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 12 HP",
  "Player_user1 otrzymuje 31 obrażeń",
  "Player_user1 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat handles combat for Sukkub with participants: [ "user1", "user2", "user3" ] 1`] = `
[
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 12 HP",
  "Player_user1 otrzymuje 31 obrażeń",
  "Player_user1 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 21 obrażeń (KRYTYK!)",
  "Sukkub korzysta z akcji Piekielne Selfie!",
  "Player_user1 otrzymuje 29 obrażeń",
  "Player_user1 zaczyna płonąć!",
  "Player_user1 nie może walczyć!",
  "Player_user2 otrzymuje 29 obrażeń",
  "Player_user2 zaczyna płonąć!",
  "Player_user3 otrzymuje 29 obrażeń",
  "Player_user3 zaczyna płonąć!",
  "Player_user2 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user3 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user2 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 14 obrażeń",
  "Player_user3 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 21 obrażeń (KRYTYK!)",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 18 HP",
  "Player_user2 otrzymuje 46 obrażeń (KRYTYK!)",
  "Player_user2 nie może walczyć!",
  "Player_user3 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user3 korzysta z umiejętności Heal!",
  "Player_user3 otrzymuje leczenie za 15 HP",
  "Sukkub korzysta z akcji Uwodzenie!",
  "Player_user3 traci tarczę!",
  "Player_user3 otrzymuje osłabienie!",
  "Player_user3 otrzymuje 5 obrażeń od efektu podpalenie",
  "Player_user3 korzysta z umiejętności Strike!",
  "Sukkub otrzymuje 18 obrażeń (KRYTYK!)",
  "Sukkub korzysta z akcji Pocałunek Sukkuba!",
  "Sukkub kradnie 13 HP",
  "Player_user3 otrzymuje 33 obrażeń",
  "Player_user3 nie może walczyć!",
  "Wszyscy gracze zostali pokonani!",
]
`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 1 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 2 player(s) participants should have consistent capture rate 1`] = `0.13`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 3 player(s) participants should have consistent capture rate 1`] = `0.55`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 4 player(s) participants should have consistent capture rate 1`] = `0.76`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 5 player(s) participants should have consistent capture rate 1`] = `0.88`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 6 player(s) participants should have consistent capture rate 1`] = `0.84`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 7 player(s) participants should have consistent capture rate 1`] = `0.9`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 8 player(s) participants should have consistent capture rate 1`] = `0.9`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 9 player(s) participants should have consistent capture rate 1`] = `0.9`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 10 player(s) participants should have consistent capture rate 1`] = `0.83`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 12 player(s) participants should have consistent capture rate 1`] = `0.94`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 15 player(s) participants should have consistent capture rate 1`] = `0.75`;

exports[`CombatService executeCombat capture rate statistics for "Szopołak" with 20 player(s) participants should have consistent capture rate 1`] = `0.7`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 1 player(s) participants should have consistent capture rate 1`] = `0.09`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 2 player(s) participants should have consistent capture rate 1`] = `0.16`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 3 player(s) participants should have consistent capture rate 1`] = `0.48`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 4 player(s) participants should have consistent capture rate 1`] = `0.62`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 5 player(s) participants should have consistent capture rate 1`] = `0.68`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 6 player(s) participants should have consistent capture rate 1`] = `0.47`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 7 player(s) participants should have consistent capture rate 1`] = `0.46`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 8 player(s) participants should have consistent capture rate 1`] = `0.74`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 9 player(s) participants should have consistent capture rate 1`] = `0.71`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 10 player(s) participants should have consistent capture rate 1`] = `0.43`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 12 player(s) participants should have consistent capture rate 1`] = `0.53`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 15 player(s) participants should have consistent capture rate 1`] = `0.1`;

exports[`CombatService executeCombat capture rate statistics for "Duch Wędkarza" with 20 player(s) participants should have consistent capture rate 1`] = `0.05`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 1 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 2 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 3 player(s) participants should have consistent capture rate 1`] = `0.08`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 4 player(s) participants should have consistent capture rate 1`] = `0.2`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 5 player(s) participants should have consistent capture rate 1`] = `0.62`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 6 player(s) participants should have consistent capture rate 1`] = `0.38`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 7 player(s) participants should have consistent capture rate 1`] = `0.43`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 8 player(s) participants should have consistent capture rate 1`] = `0.65`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 9 player(s) participants should have consistent capture rate 1`] = `0.8`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 10 player(s) participants should have consistent capture rate 1`] = `0.8`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 12 player(s) participants should have consistent capture rate 1`] = `0.81`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 15 player(s) participants should have consistent capture rate 1`] = `0.78`;

exports[`CombatService executeCombat capture rate statistics for "Zombie Bruno" with 20 player(s) participants should have consistent capture rate 1`] = `0.8`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 1 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 2 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 3 player(s) participants should have consistent capture rate 1`] = `0.08`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 4 player(s) participants should have consistent capture rate 1`] = `0.2`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 5 player(s) participants should have consistent capture rate 1`] = `0.31`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 6 player(s) participants should have consistent capture rate 1`] = `0.38`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 7 player(s) participants should have consistent capture rate 1`] = `0.47`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 8 player(s) participants should have consistent capture rate 1`] = `0.59`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 9 player(s) participants should have consistent capture rate 1`] = `0.65`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 10 player(s) participants should have consistent capture rate 1`] = `0.57`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 12 player(s) participants should have consistent capture rate 1`] = `0.66`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 15 player(s) participants should have consistent capture rate 1`] = `0.57`;

exports[`CombatService executeCombat capture rate statistics for "Harpia" with 20 player(s) participants should have consistent capture rate 1`] = `0.48`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 1 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 2 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 3 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 4 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 5 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 6 player(s) participants should have consistent capture rate 1`] = `0.01`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 7 player(s) participants should have consistent capture rate 1`] = `0.04`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 8 player(s) participants should have consistent capture rate 1`] = `0.25`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 9 player(s) participants should have consistent capture rate 1`] = `0.38`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 10 player(s) participants should have consistent capture rate 1`] = `0.71`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 12 player(s) participants should have consistent capture rate 1`] = `0.99`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 15 player(s) participants should have consistent capture rate 1`] = `1`;

exports[`CombatService executeCombat capture rate statistics for "Opętana Lalka" with 20 player(s) participants should have consistent capture rate 1`] = `1`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 1 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 2 player(s) participants should have consistent capture rate 1`] = `0`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 3 player(s) participants should have consistent capture rate 1`] = `0.01`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 4 player(s) participants should have consistent capture rate 1`] = `0.1`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 5 player(s) participants should have consistent capture rate 1`] = `0.22`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 6 player(s) participants should have consistent capture rate 1`] = `0.31`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 7 player(s) participants should have consistent capture rate 1`] = `0.49`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 8 player(s) participants should have consistent capture rate 1`] = `0.67`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 9 player(s) participants should have consistent capture rate 1`] = `0.76`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 10 player(s) participants should have consistent capture rate 1`] = `0.71`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 12 player(s) participants should have consistent capture rate 1`] = `0.87`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 15 player(s) participants should have consistent capture rate 1`] = `0.88`;

exports[`CombatService executeCombat capture rate statistics for "Sukkub" with 20 player(s) participants should have consistent capture rate 1`] = `0.91`;
